nginx/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - backend.engage.town
    secretName: backend-crt
  rules:
  - host: backend.engage.town
    http:
      paths:
        - backend:
            serviceName: backend
            servicePort: 80
